# UltraDict2

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  UltraDict.py  UltraDict2.py  __init__.py  pyproject.toml  readme.md  requirements.txt  setup.py
.github/workflows/: _reusable-build-wheels.yml  ci.yml  on-release.yml  test.yml
UltraDict2/: Exceptions.py  Metrics.py  UltraDict2.py  __init__.py
docs/: memory-exhaustion.html
examples/: fork.py  mccoydj1.py  mccoydj1_nested.py  nested.py  oop.py  parallel.py  recover_from_stale_lock.py  recover_from_stale_lock_manual.py  simple.py
tests/: concurrent_boot.py  tests.py
tests/performance/: buffer_size_sweep.py  compare.py  performance.py
