[build-system]
requires        = ["setuptools>=77", "setuptools-scm>=8", "wheel", "cython"]
build-backend   = "setuptools.build_meta"

[project]
name            = "UltraDict2"
description     = "Sychronized, streaming dictionary that uses shared memory as a backend"
readme          = "readme.md"
requires-python = ">=3.11"
license         = "Apache-2.0"
license-files   = ["LICENSE"]
authors         = [{ name = "Ronny Rentner", email = "ultradict.code@ronny-rentner.de" }]
dynamic         = ["version"]
dependencies    = ["atomics2==1.1.0", "psutil"]

[project.urls]
Homepage        = "https://github.com/mvanderlee/UltraDict2"

[tool.setuptools]
packages        = ["UltraDict2"]
zip-safe        = false

# version comes from the git tag (e.g. tag v0.0.9 -> version 0.0.9);
# untagged builds get a dev version derived from the last reachable tag
[tool.setuptools_scm]
# used when building without git metadata (e.g. GitHub source zip downloads)
fallback_version = "0.0.0"

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 140

# Many false positives and wrong assumptoins with pylint unfortuantely and
# also really wrong things like "unidiomatic-typecheck" or "import-outside-toplevel"
disable         = ["missing-module-docstring", "missing-class-docstring", "missing-function-docstring",
                   "unidiomatic-typecheck", "multiple-imports", "fixme", "no-else-return", "unused-argument",
		   "invalid-name", "import-outside-toplevel", "no-self-use", "method-hidden", "line-too-long",
		   "raise-missing-from", "redefined-builtin", "logging-too-many-args", "logging-fstring-interpolation",
		   "deprecated-method", "inconsistent-return-statements", "too-many-instance-attributes"]

[tool.pylint.'DESIGN']
max-attributes  = 22
good-names-rgxs = "^[_a-z][_a-z0-9]?$"
